<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/dialog_card"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="8dp"
	app:cardCornerRadius="8dp"
	app:cardElevation="4dp"
	app:strokeColor="@android:color/transparent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/transparent"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textview.MaterialTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/tile_label"
			android:textSize="20sp"
			android:layout_marginBottom="10dp" />

		<com.google.android.material.button.MaterialButtonToggleGroup
			app:singleSelection="false"
			app:selectionRequired="false"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="70dp"
			android:layout_marginBottom="10dp">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/colorToggleButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				style="?attr/materialButtonOutlinedStyle"
				app:toggleCheckedStateOnClick="false"
				app:icon="@drawable/outline_lightbulb_24"
				android:text="@string/toggle_color" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/whiteToggleButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				style="?attr/materialButtonOutlinedStyle"
				app:toggleCheckedStateOnClick="false"
				app:icon="@drawable/outline_lightbulb_24"
				android:text="@string/toggle_white" />
		</com.google.android.material.button.MaterialButtonToggleGroup>

		<com.google.android.material.divider.MaterialDivider
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="10dp" />

		<SeekBar
			android:id="@+id/whitePickerTemperature"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:min="153"
			android:max="500"
			android:progressDrawable="@drawable/seekbar_temperature"
			android:splitTrack="false"
			android:thumb="@drawable/seekbar_thumb"
			android:layout_marginBottom="10dp" />

		<SeekBar
			android:id="@+id/whitePickerBrightness"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:min="0"
			android:max="100"
			android:progressDrawable="@drawable/seekbar_brightness"
			android:splitTrack="false"
			android:thumb="@drawable/seekbar_thumb"
			android:layout_marginBottom="10dp" />

		<com.google.android.material.divider.MaterialDivider
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="10dp" />

		<com.skydoves.colorpickerview.ColorPickerView
			android:id="@+id/colorPickerView"
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_gravity="center"
			app:preferenceName="ControlDialogColorPicker"
			app:selector="@drawable/seekbar_thumb"
			android:layout_marginBottom="10dp" />

		<LinearLayout
			android:id="@+id/schemeSpeedWrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginBottom="10dp">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:src="@drawable/baseline_add_24"
				app:tint="?attr/colorOnSurfaceVariant"
				android:contentDescription="@string/speed_inc" />

			<com.google.android.material.slider.Slider
				android:id="@+id/schemeSpeedSlider"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:valueFrom="1"
				android:valueTo="10"
				android:stepSize="1"
				app:trackColorActive="@color/m3_slider_active_track_color"
				app:trackColorInactive="@color/m3_slider_active_track_color"
				app:tickColorActive="@color/m3_slider_inactive_track_color"
				app:tickColorInactive="@color/m3_slider_inactive_track_color"
				tools:ignore="PrivateResource" />

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:src="@drawable/baseline_remove_24"
				app:tint="?attr/colorOnSurfaceVariant"
				android:contentDescription="@string/speed_dec" />
		</LinearLayout>

		<SeekBar
			android:id="@+id/colorPickerBrightness"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:min="0"
			android:max="100"
			android:progressDrawable="@drawable/seekbar_brightness"
			android:splitTrack="false"
			android:thumb="@drawable/seekbar_thumb"
			android:layout_marginBottom="10dp" />

		<com.google.android.material.button.MaterialButtonToggleGroup
			android:id="@+id/schemeToggleGroup"
			app:singleSelection="true"
			app:selectionRequired="true"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/schemeSingleButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				style="?attr/materialButtonOutlinedStyle"
				app:toggleCheckedStateOnClick="true"
				android:text="@string/scheme_single" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/schemeCycleButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				style="?attr/materialButtonOutlinedStyle"
				app:toggleCheckedStateOnClick="true"
				android:text="@string/scheme_cycle" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/schemeRandomButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				style="?attr/materialButtonOutlinedStyle"
				app:toggleCheckedStateOnClick="true"
				android:text="@string/scheme_random" />
		</com.google.android.material.button.MaterialButtonToggleGroup>

		<com.google.android.material.divider.MaterialDivider
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="10dp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/dialog_close"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/close" />
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>